[package]
name = "packet_crafter"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
hex = "0.4.3"
pcap-file = "2.0.0"
pnet = "0.35.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.8"